<resources>
    <string name="app_name">MAS</string>
    <string name="loading">努力加载中...</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="notset">未设置</string>
    <string name="seted">已设置</string>
    <string name="get_vercode">获取验证码</string>
    <string name="verify_vercode_success">验证成功</string>
    <string name="vercode_sendto">验证码将发送至</string>
    <string name="sended">已发送</string>
    <string name="resend">重新发送</string>
    <string name="next_step">下一步</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_offline">货到付款</string>
    <string name="pzl_choose">请选择</string>
    <string name="take_photo">拍照</string>
    <string name="my_album">我的相册</string>
    <string name="mine_loginorreg">登录/注册</string>
    <string name="mine_title_czk">储值卡</string>
    <string name="mine_title_yhq">优惠券</string>
    <string name="mine_title_address">收货地址</string>
    <string name="mine_title_collection">我的收藏</string>
    <string name="mine_title_message">消息中心</string>
    <string name="mine_title_help">帮助中心</string>
    <string name="mine_title_about">关于码尚</string>
    <string name="mine_title_gift">邀请好友</string>
    <string name="personalinfo_title">个人资料</string>
    <string name="personalinfo_title_photo">头像</string>
    <string name="personalinfo_title_nick">昵称</string>
    <string name="personalinfo_title_sex">性别</string>
    <string name="personalinfo_title_birth">生日</string>
    <string name="personalinfo_title_phone">手机</string>
    <string name="personalinfo_hint_bindAccount">账号绑定</string>
    <string name="personalinfo_change_nickname_title">修改昵称</string>
    <string name="personalinfo_change_nickname_title_failue">修改昵称失败</string>
    <string name="personalinfo_change_nickname_title_success">修改昵称成功</string>
    <string name="personalinfo_change_nickname_hint_input">请输入昵称</string>
    <string name="personalinfo_change_nickname_hint_format">4-20个字符，可有中英文和数字组成</string>
    <string name="setting_title">设置</string>
    <string name="setting_hint_safe">安全设置</string>
    <string name="setting_hint_system">系统设置</string>
    <string name="setting_title_login_password">登录密码</string>
    <string name="setting_title_pay_password">支付密码</string>
    <string name="setting_title_cleancache">清除缓存</string>
    <string name="setting_title_quit">退出当前账号</string>
    <string name="bindphone_title">绑定手机</string>
    <string name="verify_phone_title">验证手机</string>
    <string name="bindphone_btn_ok">确认绑定</string>
    <string name="bindphone_btn_ok_v">验证后绑定新手机</string>
    <string name="bindphone_hint_input_newnumber">请输入新的手机号码</string>
    <string name="bindphone_hint_input_vercode">请输入手机验证码</string>
    <string name="bindphone_bindedphone">已绑定手机</string>
    <string name="bindphone_failue">绑定手机失败</string>
    <string name="bindphone_success">绑定成功</string>
    <string name="vbs_title_login_password">设置登录密码</string>
    <string name="vbs_title_pay_password">设置支付密码</string>
    <string name="vbs_hint_login_password_benefit">设置登录密码后，您可以使用手机号码+密码登录</string>
    <string name="vbs_hint_pay_password_benefit">为了保障安全，使用储值卡前请先设置支付密码</string>
    <string name="slp_hint_input_password">请输入密码</string>
    <string name="slp_hint_input_password_6">请输入6位数字密码</string>
    <string name="slp_hint_input_password_6_again">请再次输入6位数字密码</string>
    <string name="slp_hint_input_password_re">请重新输入密码</string>
    <string name="slp_hint_password_rule">密码(6-20位字符，由英文、数字及标点组成)</string>
    <string name="camera_error">相机错误</string>
    <string name="get_photo_error">图片获取失败</string>
    <string name="net_error">当前网络不可用</string>
    <string name="toast_phone_format_wrong">请输入正确的手机号码</string>
    <string name="toast_password_format_wrong">请输入正确格式的密码</string>
    <string name="toast_twice_login_password_wrong">两次输入的密码不一样</string>
    <string name="toast_clean_cache_ok">缓存清理成功</string>
    <string name="toast_set_login_password_ok">登录密码设置成功</string>
    <string name="toast_get_vercode_ok">验证码获取成功</string>
    <string name="toast_get_vercode_failue">验证码获取失败</string>
    <string name="toast_add_address_ok">地址添加成功</string>
    <string name="toast_delete_address_ok">地址删除成功</string>
    <string name="toast_edit_address_ok">地址修改成功</string>
    <string name="toast_update_failue">更新失败</string>
    <string name="toast_update_success">更新成功</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_fail">登录失败</string>
    <string name="toast_order_commit_success">订单提交成功</string>
    <string name="toast_order_commit_failure">订单提交失败</string>
    <string name="toast_edit_address">请输入收货地址</string>
    <string name="toast_edit_receiver_name">请输入收件人姓名</string>
    <string name="toast_edit_phone">请输入联系电话</string>
    <string name="toast_select_delivery_time">请选择配送时间</string>
    <string name="toast_select_payment_mode">请选择支付方式</string>
    <string name="toast_edit_company">请填写公司信息</string>
    <string name="toast_tip_pay">获取订单中...</string>
    <string name="toast_tip_order_miss">订单信息缺失</string>
    <string name="toast_prepay_failure">获取预支付订单失败</string>
    <string name="toast_order_coupon_failure">获取优惠券失败</string>
    <string name="toast_order_coupon_amount_failure">更新优惠券价格失败</string>
    <string name="toast_order_amount_failure">价格信息更新失败</string>
    <string name="toast_no_goods">无更多商品</string>
    <string name="toast_failure_add_goods">购物车添加商品失败</string>
    <string name="toast_search_no_goods">搜索无商品</string>
    <string name="toast_error_goods">商品数据异常</string>
    <string name="toast_error_add_cart">添加购物车失败</string>
    <string name="toast_error_collection">收藏或取消收藏失败</string>
    <string name="toast_category_filter_empty">分类信息为空</string>
    <string name="order_edit_title">填写订单</string>
    <string name="order_edit_hint_roomid">如门牌号等</string>
    <string name="order_edit_hint_name">请输入姓名</string>
    <string name="order_edit_hint_phone">请输入手机号码</string>
    <string name="order_edit_title_served_time">送达时间</string>
    <string name="order_edit_title_served_now">立即送达</string>
    <string name="order_edit_title_served_now_20m">立即送达(20分钟送达)</string>
    <string name="order_edit_title_open_surplus">展开剩余商品</string>
    <string name="order_edit_title_close_surplus">隐藏商品</string>
    <string name="order_edit_title_choose_pay_mode">选择支付方式</string>
    <string name="order_edit_title_invoice_info">发票信息</string>
    <string name="order_edit_title_invoice_no">不需要发票</string>
    <string name="order_edit_title_remark">备注:</string>
    <string name="order_edit_hint_remark">订单备注（限30字）</string>
    <string name="order_edit_title_coupon">优惠券</string>
    <string name="order_edit_title_goodsmoney">商品金额</string>
    <string name="order_edit_title_benefit">优惠</string>
    <string name="order_edit_title_should_pay">应付</string>
    <string name="order_edit_title_should_pay_colon">应付:</string>
    <string name="order_edit_title_order_submit">提交订单</string>
    <string name="order_edit_hint_business_time">(营业时间10:00-20:00)</string>
    <string name="order_edit_money_unit">￥</string>
    <string name="order_edit_money_unit_decrease">-￥</string>
    <string name="specs_colon">规格:</string>
    <string name="price_colon">价格:</string>
    <string name="amount_colon">数量:</string>
    <string name="common_address">常用地址</string>
    <string name="invoice_title_type">发票类型</string>
    <string name="invoice_title_title">发票抬头</string>
    <string name="invoice_title_content">发票内容</string>
    <string name="invoice_content_ordinary">普通发票</string>
    <string name="invoice_content_vat">增值税发票</string>
    <string name="invoice_content_personal">个人</string>
    <string name="invoice_content_company">单位</string>
    <string name="invoice_content_wine">酒水</string>
    <string name="invoice_content_detail">明细</string>
    <string name="invoice_hint_input">请输入30字以内字符</string>
    <string name="invoice_without">无需发票</string>
    <string name="order_title">我的订单</string>
    <string name="order_item_id">订单编号:</string>
    <string name="order_item_count">总计:</string>
    <string name="order_item_count_2">合计:</string>
    <string name="order_item_refresh_map">刷新地图</string>
    <string name="order_hint_no_order">暂无可显示订单哦</string>
    <string name="order_hint_served_time">预计送达时间:</string>
    <string name="order_hint_shopper_name">配送员:</string>
    <string name="order_hint_contact_brother">联系小哥</string>
    <string name="order_hint_contact_business">联系商家</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_detail_title_pay_info">支付信息</string>
    <string name="order_detail_item_pay_mode">支付方式</string>
    <string name="order_detail_item_pay_wx">微信支付</string>
    <string name="order_detail_title_distribution_info">配送信息</string>
    <string name="order_detail_item_god_name">收货人:</string>
    <string name="order_detail_item_god_phone">电话号:</string>
    <string name="order_detail_item_god_address">收货地址:</string>
    <string name="order_detail_item_distribution_name">配送人员:</string>
    <string name="order_detail_title_orderinfo">订单信息</string>
    <string name="order_detail_item_invoice">发票:</string>
    <string name="order_detail_item_distribution_time">配送时间:</string>
    <string name="order_detail_item_order_renarks">订单备注:</string>
    <string name="order_detail_title_total_price">总金额:</string>
    <string name="order_detail_contact_airline">联系客服</string>
    <string name="order_detail_introductions_aftersale">售后须知</string>
    <string name="order_detail_phone_aftersale">联系客服 (088-869662)</string>
    <string name="order_detail_aftersale">售后详情</string>
    <string name="order_after_sale_complete">处理完成</string>
    <string name="order_after_sale_number">订单编号:</string>
    <string name="order_after_sale_type">售后类型:</string>
    <string name="order_after_sale_money">退款金额:</string>
    <string name="order_after_sale_time">发起时间:</string>
    <string name="order_after_sale_product">处理商品</string>
    <string name="order_detail_introductions01">(1) 客户签收时应当场验货，确认种类、数量、规格、赠品、金额是否与订单一致，确认无误后再签收。若存在问题请联系官方客服。\n</string>
    <string name="order_detail_introductions02">(2) 如酒水有质量或破损等问题可免费退换货。如商品无任何问题，自实际收到货物日期起3日内，包装完好无损可全额退货。\n</string>
    <string name="order_detail_introductions03">(3) 客户申请退换货业务时，要求退换酒品包装及二维码完整。要求退换酒品无外包装时，需满足酒瓶未开启；酒品所附赠品和发票齐全且保存完好，批号相符，否则将不予办理退换货。\n</string>
    <string name="order_detail_introductions04">(4) 退货由配送人员上门服务，收回酒品、附属物品并填写退换货登记卡；若不满足派送条件，需您亲自将酒品、附属物品和退换货登记卡送至指定地点。钱款去向需与工作人员沟通退款方式。\n</string>
    <string name="order_detail_introductions05">(5) 如果您在使用时对商品质量表示置疑，您可出具相关书面鉴定，我们会按法律规定予以处理。\n</string>
    <string name="evaluate_title">评价</string>
    <string name="assist_center_question01">Q1.我们的支付方式有那些？</string>
    <string name="assist_center_question02">Q2.订单取消后，钱怎么返还？</string>
    <string name="assist_center_question03">Q3.红包就等于优惠券？</string>
    <string name="assist_center_question04">Q4.申请退款如何查看？</string>
    <string name="assist_center_question05">Q5.账户若手机不用无法更换怎么办？</string>
    <string name="assist_center_question06">Q6.货到付款的订单可以取消吗？</string>
    <string name="assist_center_question07">Q7.可以开具发票吗？</string>
    <string name="assist_center_answer01">支付方式分为两类，一类是在线支付，目前支持微信支付、支付宝支付。另一种为货到付款，您可以验收后以现金或银行卡的方式，钱款由派送人员代收。\n\n</string>
    <string name="assist_center_answer02">我们将根据您的支付方式，钱款会退回相应账户。（退款时间根据第三方平台规定时间为准）。\n\n</string>
    <string name="assist_center_answer03">是的，您说领取到的任何红包或优惠券请直接在“我的—优惠券”中进行查询。使用方式根据优惠券要求即可。\n\n</string>
    <string name="assist_center_answer04">您可在“订单—处理中／历史订单”中找到您对应的售后订单即可。\n\n</string>
    <string name="assist_center_answer05">请及时联系客服进行修改。\n\n</string>
    <string name="assist_center_answer06">可以，如果一个ID帐号在一个月内有过1次以上或一年内累计3次以上（不含本数），因非i尚酒原因拒收配送的商品，i尚酒将此ID帐号停用1年（365天为一年，不以自然月和自然年计算）。\n\n</string>
    <string name="assist_center_answer07">可以，您在填写订单时填写选择即可，若忘记选择开具请致电我司帮您重新开具。\n\n</string>
</resources>