<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/dialog_cs_bg"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="@string/order_detail_introductions_aftersale"
            android:textColor="@color/text_color_bar"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_introductions01" />

                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_introductions02" />

                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_introductions03" />

                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_introductions04" />

                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/hint_text_gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_detail_introductions05" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/btn_airline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/main_color_red"
            android:gravity="center"
            android:text="@string/order_detail_phone_aftersale"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>