<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activity_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/titlebar_normal"
        android:id="@+id/temp_ll_invoice_info_head"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_ll_invoice_info_head"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/invoice_title_type"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="@color/hint_text_gray"
            android:layout_marginLeft="15dp"
            />
        <RadioGroup
            android:id="@+id/rg_invoice_info_type"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            >
            <RadioButton
                android:id="@+id/rb_invoice_info_ordinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content_ordinary"
                android:background="@color/fulltransparent"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/selecter_btn_invoice_info"
                android:textSize="14sp"
                android:textColor="@drawable/selecter_tv_invoice_info"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_invoice_info_vat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content_vat"
                android:background="@color/fulltransparent"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/selecter_btn_invoice_info"
                android:textSize="14sp"
                android:textColor="@drawable/selecter_tv_invoice_info"
                android:layout_marginLeft="60dp"
                />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/invoice_title_title"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="@color/hint_text_gray"
            android:layout_marginLeft="15dp"
            />
        <RadioGroup
            android:id="@+id/rg_invoice_info_title"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            >
            <RadioButton
                android:id="@+id/rb_invoice_info_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content_personal"
                android:background="@color/fulltransparent"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/selecter_btn_invoice_info"
                android:textSize="14sp"
                android:textColor="@drawable/selecter_tv_invoice_info"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rb_invoice_info_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content_company"
                android:background="@color/fulltransparent"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/selecter_btn_invoice_info"
                android:textSize="14sp"
                android:textColor="@drawable/selecter_tv_invoice_info"
                android:layout_marginLeft="60dp"
                />

        </RadioGroup>
        <LinearLayout
            android:id="@+id/ll_invoice_info_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:background="@color/white"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/et_invoice_info_company_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/border_gray_solid_white_10"
                android:textSize="12sp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textColorHint="@color/et_hint_gray"
                android:hint="@string/invoice_hint_input"
                android:textColor="@color/text_color_bar"
                android:singleLine="true"
                android:maxLength="30"

                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/invoice_title_content"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:textColor="@color/hint_text_gray"
            android:layout_marginLeft="15dp"
            />
        <RadioGroup
            android:id="@+id/rg_invoice_info_content"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            >
            <RadioButton
                android:id="@+id/rb_invoice_info_wine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content_wine"
                android:background="@color/fulltransparent"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/selecter_btn_invoice_info"
                android:textSize="14sp"
                android:textColor="@drawable/selecter_tv_invoice_info"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rb_invoice_info_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invoice_content_detail"
                android:background="@color/fulltransparent"
                android:button="@null"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/selecter_btn_invoice_info"
                android:textSize="14sp"
                android:textColor="@drawable/selecter_tv_invoice_info"
                android:layout_marginLeft="60dp"
                />

        </RadioGroup>

        <Button
            android:id="@+id/btn_invoice_info_done"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_status_enable"
            />

        <Button
            android:id="@+id/btn_without_invoice"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/invoice_without"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="13dp"
            android:background="@drawable/btn_status_unable"
            />

    </LinearLayout>


</RelativeLayout>