<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/activity_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/titlebar_category"
        android:id="@+id/temp_ll_vbs_head"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temp_ll_vbs_head"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_vbs_hint"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/vbs_hint_login_password_benefit"
                android:gravity="center_vertical"
                android:textSize="12dp"
                android:textColor="@color/main_color_red"
                android:layout_marginLeft="10dp"
                />
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">
                <Button
                    android:id="@+id/btn_vbs_getvercode"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/get_vercode"
                    android:background="@color/main_color_red"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/white"
                    />
                <EditText
                    android:id="@+id/et_vbs_vercode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/btn_vbs_getvercode"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:hint="@string/bindphone_hint_input_vercode"
                    android:textSize="14sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="36dp"
                    android:textColorHint="@color/et_hint_gray"
                    android:inputType="number|textNoSuggestions"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_vbs_sendto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vercode_sendto"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:textSize="11dp"
                android:textColor="@color/status_text_gray"
                android:layout_marginLeft="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_vbs_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/next_step"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:background="@drawable/btn_status_unable"
            />

    </LinearLayout>

    <include layout="@layout/network_loading_av_bg_transparent_44" />

</RelativeLayout>